--- a/manual/ru/introduction/Updating.html
+++ b/manual/ru/introduction/Updating.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Updating for New Verge3D Versions - Soft8Soft</title>
+    <title>Обновление SDK Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how properly update your Verge3D applications once a new version is out."/>
+    <meta name="description" content="Обновление SDK Verge3D"/>
     <base href="../../../" />
+    <script src="list.js"></script>
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
 
-    <h1>Updating for New Versions</h1>
+    <h1>Обновление SDK до новой версии</h1>
 
     <p>
-    Verge3D is being actively developed with software releases occuring regularly. There is also the pre-release channel of updates with new versions coming out even more often. We recommend you to keep in pace with the development cycle and timely update your Verge3D distribution and applications.
+      Verge3D активно развивается и мы регулярно публикуем релизы с новыми функциями. Также выкладываются пре-релизы. Мы рекомендуем вам своевременно обновлять дистрибутив Verge3D и приложения.
     </p>
 
     [contents]
@@ -21,118 +22,118 @@
 
     [anchor:Update_Verge3D_installation]
 
-    <h2>Update Verge3D Installation</h2>
+    <h2>Обновление Verge3D</h2>
 
     <p>
-    Backup your current Verge3D folder by renaming it (from "verge3d" to "verge3d_old", for example).
+      Сделайте резервную копию текущей папки Verge3D, переименовав ее, например, с «verge3d» на «verge3d_old».
     </p>
 
     <p>
-    Download and unpack the latest Verge3D bundle in a fresh folder with the same name (that is, "verge3d").
+      Загрузите и распакуйте свежий дистрибутив Verge3D в новую папку с тем же именем (то есть «verge3d»).
     </p>
 
     <img src="files/updating/files-backup.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    By using the same name for the fresh folder you can avoid re-configuring paths in the 3D editor of your choice.
+      Используя одно и тоже название папки, вы можете избежать повторной настройки путей в выбранном 3D-редакторе.
     </p>
 
 
     [anchor:update_applications]
 
-    <h2>Update Applications</h2>
+    <h2>Обновление приложений</h2>
 
 
     [anchor:Update_Applications_Auto]
 
-    <h3>Method #1 (Automatic) - use the update feature</h3>
+    <h3>Способ №1 (автоматический) - используйте функцию обновления</h3>
 
     <p>
-    Simply copy the entire folder with your application to the <strong>applications</strong> folder of the fresh Verge3D installation. After launching the App Manager, your app name should appear in the list of apps (reload the page if not). Click the update button with the round arrow on it.
+      Просто скопируйте всю папку с приложением в папку <strong> applications </strong> новой установки Verge3D. После запуска менеджера приложений имя вашего проекта должно появиться в списке приложений (если нет, то перезагрузите страницу). Нажмите кнопку обновления с изображением круглой стрелки.
     </p>
 
     <img src="files/updating/app-manager-update-button.jpg" class="centered" style="max-width: 705px">
 
     <p>
-    In the window shown up, select the template files you'd like to overwrite. You can safely select everything if you didn't edit the files. If you modified the files, be sure to backup them first so that you can cherry-pick the changes back later, and only after that proceed with overwriting.
+      В появившемся окне выберите файлы шаблонов, которые вы хотите перезаписать. Вы можете смело выбирать все, если не редактировали файлы. Если вы изменили файлы, обязательно сначала сделайте их резервную копию, чтобы потом можно было восстановить изменения, и только после этого приступайте к перезаписи.
     </p>
 
     <img src="files/updating/application-update-window.jpg" class="centered" style="max-width: 780px">
 
 
     <p>
-    Under the hood, this operation overwrites the engine modules by the files from the <strong>/build</strong> folder, namely, Verge3D runtime <strong>v3d.js</strong> and optional compatibility modules <strong>ie_compat.js</strong> (enabled by *IE 11* checkbox) and <strong>webxr-polyfill.js</strong> (enabled by *Legacy VR* checkbox in the app creation panel). If you choose so, this operation will also overwrite the selected HTML/CSS/JavaScript files and the icons folder <strong>media</strong> by the files from the <strong>/manager/templates/template_name</strong> folder.
+      Эта операция перезаписывает модули движка файлами из папки <strong> /build </strong>, а именно: среду выполнения Verge3D <strong> v3d.js </strong>, дополнительные модули совместимости <strong> ie_compat.js </strong> (активируется флажком *IE 11*) и <strong> webxr-polyfill.js </strong> (активируется флажком *Legacy VR * на панели создания приложения). Если вы выберете этот вариант, то также перезапишутся  файлы HTML/CSS/JavaScript и иконки папки <strong> media </strong> (файлами из директории <strong> /manager/templates/template_name) </strong>.
     </p>
 
-    <p>Upon updating, App Manager will save older versions of your files in the app's <strong>v3d_app_data/update_backup</strong> directory with a time stamp added. This allows you to restore any of the previously saved revisions of your app files when you need them. Simply copy a file back to the application folder root and remove the time stamp from its name.</p>
+    <p> После обновления менеджер приложений сохранит старые версии ваших файлов в каталоге проекта <strong> v3d_app_data/update_backup </strong> с добавленной отметкой времени. Это позволяет вам восстанавливать любую из ранее сохраненных версий файлов вашего приложения, когда они вам нужны. Просто скопируйте файл обратно в корень папки приложения и удалите отметку времени из его имени. </p>
 
 
     [anchor:Update_Applications_Clean]
 
-    <h3>Method #2 (Clean) - re-create your app from scratch</h3>
+    <h3>Способ №2 (чистый) - воссоздайте приложение с нуля</h3>
 
     <p>
-    This is an alternative method of updating where you are in full control of your files. You can use it to get rid of obsolete files or if for some reason the automatic update method is not applicable.
+      Это альтернативный метод обновления, при котором вы полностью контролируете свои файлы. Вы можете использовать его, чтобы избавиться от устаревших файлов или когда метод автоматического обновления не применим.
     </p>
 
     <p>
-    To perform clean updating, in the App Manager type the name of your app in the "Create new App" window and click "Create App" button.
+      Чтобы выполнить чистое обновление, в менеджере приложений введите имя вашего проекта в окне «Create new App» и нажмите кнопку «Create App».
     </p>
 
     <img src="files/updating/app-manager-create-new.jpg" class="centered" style="max-width: 358px">
 
     <p>
-    Copy <strong>.max</strong> or <strong>.blend</strong> files, all the textures/sounds and the Puzzles scenario file <strong>visual_logic.xml</strong> from your old app folder to the newly created app folder (located within <strong>verge3d/applications</strong>). Overwrite files when you're asked so. If you were using HTML-based UI in your app, copy all relevant files as well.
+      Скопируйте файлы <strong> .max </strong> или <strong> .blend </strong>, все текстуры/звуки и файл сценария пазлов <strong> visual_logic.xml </strong> из старой папки приложения в новую (созданная папка приложения находится в <strong> verge3d/applications </strong>). Перезапишите файлы, когда вас об этом попросят. Если вы использовали пользовательский интерфейс на основе HTML в своем приложении, скопируйте также все соответствующие файлы.
     </p>
 
     <img src="files/updating/files-copy.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-    Finally, you should perform exporting to glTF so that the exported format receives the latest updates. If you were using Puzzles in your app, you'll need to re-save your scenario in the Puzzles editor so that the generated code matches the newest version of the engine.
+      В конце, вы должны выполнить экспорт в glTF. Если вы использовали пазлы в своем приложении, вам необходимо повторно сохранить сценарий в редакторе пазлов, чтобы сгенерированный код соответствовал новейшей версии движка.
     </p>
 
     <p>
-    If you changed anything in your application's .html, .css or .js files, be sure to backup them first so that you can cherry-pick the changes back later.
+      Если вы изменили что-либо в файлах .html, .css или .js вашего приложения, обязательно сначала сделайте их резервную копию, чтобы осталась возможность вернуть изменения обратно.
     </p>
 
 
     [anchor:After_Update]
 
-    <h2>After Update</h2>
+    <h2>После обновления</h2>
 
-    <h3>Restore Puzzles library</h3>
+    <h3>Восстановление библиотеки пазлов</h3>
 
     <p>
-    If you were adding new entries in the Puzzles library, you can restore it after updating by copying the file <strong>/puzzles/library.xml</strong> to the fresh installation folder and overriding the old file.
+      Если вы добавляли новые записи в библиотеку пазлов, вы можете восстановить ее после обновления, скопировав файл <strong> /puzzles/library.xml </strong> в новую папку установки и заменив старый файл.
     </p>
 
-    <h3>Re-activate your license</h3>
+    <h3>Обновление лицензии</h3>
 
     <p>
-    You should enter the license key each time you update to a new version, otherwise your apps may render the trial watermark when running.
+      Вы должны вводить лицензионный ключ каждый раз при обновлении до новой версии, иначе ваши приложения могут отображать водяной знак во время работы.
     </p>
 
 
     [anchor:Known_Issues_and_Troubleshooting]
 
-    <h2>Known Issues and Troubleshooting</h2>
+    <h2>Известные проблемы и устранение неполадок</h2>
 
     <p>
-    On rare occasions the Puzzles button can disappear for your app in the App Manager. Please perform clean updating to fix this.
+      Изредка кнопка Puzzles может исчезнуть для вашего приложения в менеджере приложений. Пожалуйста, выполните чистое обновление, чтобы исправить это.
     </p>
 
     <p>
-    On rare occasions the Puzzles editor may fail to load after updating. Please reset your browser settings to fix this.
+      Иногда редактор пазлов может не загружаться после обновления. Пожалуйста, сбросьте настройки вашего браузера, чтобы исправить это.
     </p>
 
     <p>
-    If after updating some feature got broken, please report this on the <a href="https://www.soft8soft.com/forum/bug-reports-and-feature-requests/" target="_blank">forums</a> so that we can investigate the problem and issue a correcting release.
+      Если после обновления какая-то функция сломалась, сообщите об этом на <a href="https://www.soft8soft.com/forum/bug-reports-and-feature-requests/" target="_blank"> форуме </a>, чтобы мы могли исследовать проблему и выпустить корректирующий релиз.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Все еще есть вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
